--- a/styles/base.css
+++ b/styles/base.css
@@ -1,11 +1,8 @@
 
-*{   margin: 0;
-    padding:0
+*{  margin: 0;
+    padding:0;
+    box-sizing: border-box;
 }
-
-header {
-    margin: 24px;
-  }
 
 body{
     margin: 24px;
