--- a/styles/nav.css
+++ b/styles/nav.css
@@ -1,36 +1,44 @@
 nav{
-    display:flex;
-    flex-flow: row nowrap;
+width: 100%;
+display: flex;
+}
+
+.lista-nav{
+    list-style: none;
+    display: flex;
     width:100%;
-    height: fit-content;
-    justify-content: center;
-
-}
-
-.icone-dicionario{
-
-    width:50%
-}
-
-.menu-dropdown{
-    display:flex;
-    justify-content: center;
     align-items: center;
-    width:24%;
+    justify-content: space-evenly;
 }
 
-.mode{
+nav li{
+    display: inline-block;
+}
+
+nav li a{
+    display: inline-block;
+    color: black;
+    text-decoration: none;
+    padding: 24px;
+}
+
+nav li a:hover{
+    background-color: #c19edb;
+}
+
+.logo{
+    width:30%
+}
+
+.icone-dicionario, .mode {
     display: flex;
-    margin-left: 20px;
-    justify-content: space-around;
     align-items: center;
-    width:20%
-   
-}
+  }
 
-.fonte-atual{
-    font-weight: 700;
-    font-family: serif;
-    display: flex;
-    gap:10px;
-}
+  .icone-dicionario{
+    width: 100%;
+  }
+
+  .dark-mode{
+    margin-left: 2px;
+  }
