--- a/styles/toggle.css
+++ b/styles/toggle.css
@@ -34,9 +34,9 @@
   }
   
   .toggle-input:checked + .toggle-label {
-    background-color: #2196F3;
+    background-color: #a445ed;
   }
   
   .toggle-input:checked + .toggle-label:before {
-    transform: translateX(26px);
+    transform: translateX(32px);
   }
