Refactor:main.js

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,5 +1,6 @@
 footer{
-    margin: 100% 0 0 0 !important;
+    position: absolute;
+    margin: 2rem 0 0 0 !important;
     padding: 0 !important;
     background-color: #a445ed;
     color: white;
