--- a/styles/base.css
+++ b/styles/base.css
@@ -1,10 +1,20 @@
 
 *{  margin: 0;
     padding:0;
-    box-sizing: border-box;
+    box-sizing: border-box;   
+    height: fit-content;
 }
 
+
 body{
-    margin: 24px;
+    margin: 12px;
+    background-color: rgb(243, 230, 255);
 }
   
+#container{
+    padding: 24px;
+    width:95%;
+    height: fit-content;
+    background-color: azure !important;
+    border-radius: 25px;
+}
