--- a/styles/base.css
+++ b/styles/base.css
@@ -14,12 +14,17 @@
 *{  margin: 0;
     padding:0;
     box-sizing: border-box;   
-    height: fit-content;
 }
 
 
 body{
-    margin: 12px;
+    margin:12px;
+    min-height: 100vh;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
     background-color: var(--background-light)
 }
   
@@ -29,6 +34,7 @@ body{
     height: fit-content;
     background-color: var(--light-container);
     border-radius: 25px;
+    
 }
 
 .theme-light{
@@ -51,3 +57,4 @@ body{
         color: var(--light-font)
       }
   }
+
