--- a/styles/palavra-digitada.css
+++ b/styles/palavra-digitada.css
@@ -34,3 +34,12 @@ font-weight: 700;
     height: 80%;
     width:80%;
 }
+
+.palavra-digitada{
+    &.theme-light {
+        color: black
+      }
+      &.theme-dark {
+        color: white
+      }
+}
