--- a/styles/dropdown.css
+++ b/styles/dropdown.css
@@ -4,21 +4,40 @@
     color: blueviolet;
     box-shadow: 0 0 2px black;
     display: none;
+
+    &.theme-light {
+      background-color: white;
+    }
+  &.theme-dark {
+      background-color: black;
+    }
 }
 
 
 .dropdown-menu a{
     display: block;
     color: blueviolet;
-    background-color: rgb(245, 245, 245);
+    &.theme-light {
+      background-color: white;
+    }
+  &.theme-dark {
+      background-color: black;
+    }
 }
 
 .dropdown:hover .dropdown-menu{
     display: block;
+    background-color: white;
+    &.theme-light {
+      background-color: white;
+    }
+  &.theme-dark {
+      background-color: black;
+    }
 }
 
 .dropdown{
-    background-color: transparent;
+
     font-weight: 700;
     &.theme-light {
         background-color: white;
